--- a/styles/general/form.css
+++ b/styles/general/form.css
@@ -1,7 +1,35 @@
+.form-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-section {
   width: 600px;
   height: 600px;
   background-color: #f6fbf9;
   border-radius: 50px;
   padding: 60px;
+}
+
+.form-header {
+  margin-bottom: 40px;
+}
+
+.form-description {
+  width: 400px;
+}
+
+.form-input {
+  width: 500px;
+  height: 80px;
+  background: #ffffff;
+  border: 1.5px solid rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 17px;
+  color: rgba(0, 0, 0, 0.5);
+  padding: 0 20px;
+  margin-bottom: 20px;
 }
