--- a/styles/general/form.css
+++ b/styles/general/form.css
@@ -20,6 +20,12 @@
   width: 400px;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-input {
   width: 500px;
   height: 80px;
@@ -32,4 +38,8 @@
   color: rgba(0, 0, 0, 0.5);
   padding: 0 20px;
   margin-bottom: 20px;
+}
+
+.form-submit {
+  color: #fff;
 }
